fix the navbar collapse toggle not showing up (missing navbar-default styling)

--- a/itfsite/static/css/main.css
+++ b/itfsite/static/css/main.css
@@ -55,6 +55,9 @@ a {
 .navbar {
 	background-color: #EEE;
 }
+	.navbar .navbar-toggle .icon-bar {
+		background-color: #888;
+	}
 
 	a.navbar-brand, .site-brand {
 		font-family: 'Fredoka One', cursive;
